fix: sponsorblock segments not showing up

--- a/mods/ui.css
+++ b/mods/ui.css
@@ -89,3 +89,9 @@
 .ytLrOverlayPanelHeaderRendererSubtitle {
   white-space: pre-wrap !important;
 }
+
+/* Fixes SponsorBlock segments overlapping with the playhead */
+
+.ytLrProgressBarPlayhead {
+  z-index: 1 !important;
+}
